fixed reference links

--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon" />
+	<link rel="shortcut icon" href=./assets/images/favicon.ico" type="image/x-icon" />
 	<title>Wedding Connections | Portfolio</title>
 
 	<!-- Bootstrap -->
@@ -15,7 +15,7 @@
 	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
 
 	<!-- Lightbox -->
-	<link rel="stylesheet" href="assets/css/lightbox.min.css" />
+	<link rel="stylesheet" href=./assets/css/lightbox.min.css" />
 
 	<!-- Page Styling -->
 	<link rel="stylesheet" href="./assets/css/style.css">
@@ -87,25 +87,25 @@
 		<!-- Image Group 1 -->
 		<div class="row no-gutters showcase__img-group mb-5">
 			<div class="col-12 col-lg-4 d-flex justify-content-center align-items-center">
-				<a data-aos="fade-right" href="assets/images/portfolio/alice_in_wonderland_1.jpg"
+				<a data-aos="fade-right" href=./assets/images/portfolio/alice_in_wonderland_1.jpg"
 					data-lightbox="Alice in Wonderland" data-title="Alice in Wonderland"
 					class="showcase__img-container">
-					<img src="assets/images/portfolio/alice_in_wonderland_1.jpg" alt="Alice in Wonderland"
+					<img src=./assets/images/portfolio/alice_in_wonderland_1.jpg" alt="Alice in Wonderland"
 						class="showcase__img" />
 				</a>
 			</div>
 			<div class="col-12 col-lg-4 d-flex justify-content-center align-items-center">
-				<a data-aos="fade-up" href="assets/images/portfolio/alice_in_wonderland_2.jpg" data-lightbox="Alice in Wonderland"
+				<a data-aos="fade-up" href=./assets/images/portfolio/alice_in_wonderland_2.jpg" data-lightbox="Alice in Wonderland"
 					data-title="Alice in Wonderland" class="showcase__img-container">
-					<img src="assets/images/portfolio/alice_in_wonderland_2.jpg" alt="Alice in Wonderland"
+					<img src=./assets/images/portfolio/alice_in_wonderland_2.jpg" alt="Alice in Wonderland"
 						class="showcase__img" />
 				</a>
 			</div>
 			<div class="col-12 col-lg-4 d-flex justify-content-center align-items-center">
-				<a data-aos="fade-left" href="assets/images/portfolio/alice_in_wonderland_3.jpg"
+				<a data-aos="fade-left" href=./assets/images/portfolio/alice_in_wonderland_3.jpg"
 					data-lightbox="Alice in Wonderland" data-title="Alice in Wonderland"
 					class="showcase__img-container">
-					<img src="assets/images/portfolio/alice_in_wonderland_3.jpg" alt="Alice in Wonderland"
+					<img src=./assets/images/portfolio/alice_in_wonderland_3.jpg" alt="Alice in Wonderland"
 						class="showcase__img" />
 				</a>
 			</div>
@@ -119,23 +119,23 @@
 		<!-- Image Group 2 -->
 		<div class="row no-gutters showcase__img-group mb-5">
 			<div class="col-12 col-lg-4 d-flex justify-content-center align-items-center">
-				<a data-aos="fade-right" href="assets/images/portfolio/beach_nautical_1.jpg" data-lightbox="Beach Nautical"
+				<a data-aos="fade-right" href=./assets/images/portfolio/beach_nautical_1.jpg" data-lightbox="Beach Nautical"
 					data-title="Beach Nautical" class="showcase__img-container">
-					<img src="assets/images/portfolio/beach_nautical_1.jpg" alt="Beach Nautical"
+					<img src=./assets/images/portfolio/beach_nautical_1.jpg" alt="Beach Nautical"
 						class="showcase__img" />
 				</a>
 			</div>
 			<div class="col-12 col-lg-4 d-flex justify-content-center align-items-center">
-				<a data-aos="fade-up" href="assets/images/portfolio/beach_nautical_2.jpg" data-lightbox="Beach Nautical"
+				<a data-aos="fade-up" href=./assets/images/portfolio/beach_nautical_2.jpg" data-lightbox="Beach Nautical"
 					data-title="Beach Nautical" class="showcase__img-container">
-					<img src="assets/images/portfolio/beach_nautical_2.jpg" alt="Beach Nautical"
+					<img src=./assets/images/portfolio/beach_nautical_2.jpg" alt="Beach Nautical"
 						class="showcase__img" />
 				</a>
 			</div>
 			<div class="col-12 col-lg-4 d-flex justify-content-center align-items-center">
-				<a data-aos="fade-left" href="assets/images/portfolio/beach_nautical_3.jpg" data-lightbox="Beach Nautical"
+				<a data-aos="fade-left" href=./assets/images/portfolio/beach_nautical_3.jpg" data-lightbox="Beach Nautical"
 					data-title="Beach Nautical" class="showcase__img-container">
-					<img src="assets/images/portfolio/beach_nautical_3.jpg" alt="Beach Nautical"
+					<img src=./assets/images/portfolio/beach_nautical_3.jpg" alt="Beach Nautical"
 						class="showcase__img" />
 				</a>
 			</div>
@@ -149,21 +149,21 @@
 		<!-- Image Group 3 -->
 		<div class="row no-gutters showcase__img-group mb-5">
 			<div class="col-12 col-lg-4 d-flex justify-content-center align-items-center">
-				<a data-aos="fade-right" href="assets/images/portfolio/filipiniana_1.jpg" data-lightbox="Filipiniana"
+				<a data-aos="fade-right" href=./assets/images/portfolio/filipiniana_1.jpg" data-lightbox="Filipiniana"
 					data-title="Filipiniana" class="showcase__img-container">
-					<img src="assets/images/portfolio/filipiniana_1.jpg" alt="Filipiniana" class="showcase__img" />
+					<img src=./assets/images/portfolio/filipiniana_1.jpg" alt="Filipiniana" class="showcase__img" />
 				</a>
 			</div>
 			<div class="col-12 col-lg-4 d-flex justify-content-center align-items-center">
-				<a data-aos="fade-up" href="assets/images/portfolio/filipiniana_2.jpg" data-lightbox="Filipiniana"
+				<a data-aos="fade-up" href=./assets/images/portfolio/filipiniana_2.jpg" data-lightbox="Filipiniana"
 					data-title="Filipiniana" class="showcase__img-container">
-					<img src="assets/images/portfolio/filipiniana_2.jpg" alt="Filipiniana" class="showcase__img" />
+					<img src=./assets/images/portfolio/filipiniana_2.jpg" alt="Filipiniana" class="showcase__img" />
 				</a>
 			</div>
 			<div class="col-12 col-lg-4 d-flex justify-content-center align-items-center">
-				<a data-aos="fade-left" href="assets/images/portfolio/filipiniana_3.jpg" data-lightbox="Filipiniana"
+				<a data-aos="fade-left" href=./assets/images/portfolio/filipiniana_3.jpg" data-lightbox="Filipiniana"
 					data-title="Filipiniana" class="showcase__img-container">
-					<img src="assets/images/portfolio/filipiniana_3.jpg" alt="Filipiniana" class="showcase__img" />
+					<img src=./assets/images/portfolio/filipiniana_3.jpg" alt="Filipiniana" class="showcase__img" />
 				</a>
 			</div>
 		</div>
@@ -176,23 +176,23 @@
 		<!-- Image Group 4 -->
 		<div class="row no-gutters showcase__img-group mb-5">
 			<div class="col-12 col-lg-4 d-flex justify-content-center align-items-center">
-				<a data-aos="fade-right" href="assets/images/portfolio/french_vineyard_1.jpg" data-lightbox="French Vineyard"
+				<a data-aos="fade-right" href=./assets/images/portfolio/french_vineyard_1.jpg" data-lightbox="French Vineyard"
 					data-title="French Vineyard" class="showcase__img-container">
-					<img src="assets/images/portfolio/french_vineyard_1.jpg" alt="French Vineyard"
+					<img src=./assets/images/portfolio/french_vineyard_1.jpg" alt="French Vineyard"
 						class="showcase__img" />
 				</a>
 			</div>
 			<div class="col-12 col-lg-4 d-flex justify-content-center align-items-center">
-				<a data-aos="fade-up" href="assets/images/portfolio/french_vineyard_2.jpg" data-lightbox="French Vineyard"
+				<a data-aos="fade-up" href=./assets/images/portfolio/french_vineyard_2.jpg" data-lightbox="French Vineyard"
 					data-title="French Vineyard" class="showcase__img-container">
-					<img src="assets/images/portfolio/french_vineyard_2.jpg" alt="French Vineyard"
+					<img src=./assets/images/portfolio/french_vineyard_2.jpg" alt="French Vineyard"
 						class="showcase__img" />
 				</a>
 			</div>
 			<div class="col-12 col-lg-4 d-flex justify-content-center align-items-center">
-				<a data-aos="fade-left" href="assets/images/portfolio/french_vineyard_3.jpg" data-lightbox="French Vineyard"
+				<a data-aos="fade-left" href=./assets/images/portfolio/french_vineyard_3.jpg" data-lightbox="French Vineyard"
 					data-title="French Vineyard" class="showcase__img-container">
-					<img src="assets/images/portfolio/french_vineyard_3.jpg" alt="French Vineyard"
+					<img src=./assets/images/portfolio/french_vineyard_3.jpg" alt="French Vineyard"
 						class="showcase__img" />
 				</a>
 			</div>
@@ -206,21 +206,21 @@
 		<!-- Image Group 5 -->
 		<div class="row no-gutters showcase__img-group mb-5">
 			<div class="col-12 col-lg-4 d-flex justify-content-center align-items-center">
-				<a data-aos="fade-right" href="assets/images/portfolio/mardi_gras_1.jpg" data-lightbox="Mardi Gras"
+				<a data-aos="fade-right" href=./assets/images/portfolio/mardi_gras_1.jpg" data-lightbox="Mardi Gras"
 					data-title="Mardi Gras" class="showcase__img-container">
-					<img src="assets/images/portfolio/mardi_gras_1.jpg" alt="Mardi Gras" class="showcase__img" />
+					<img src=./assets/images/portfolio/mardi_gras_1.jpg" alt="Mardi Gras" class="showcase__img" />
 				</a>
 			</div>
 			<div class="col-12 col-lg-4 d-flex justify-content-center align-items-center">
-				<a data-aos="fade-up" href="assets/images/portfolio/mardi_gras_2.jpg" data-lightbox="Mardi Gras"
+				<a data-aos="fade-up" href=./assets/images/portfolio/mardi_gras_2.jpg" data-lightbox="Mardi Gras"
 					data-title="Mardi Gras" class="showcase__img-container">
-					<img src="assets/images/portfolio/mardi_gras_2.jpg" alt="Mardi Gras" class="showcase__img" />
+					<img src=./assets/images/portfolio/mardi_gras_2.jpg" alt="Mardi Gras" class="showcase__img" />
 				</a>
 			</div>
 			<div class="col-12 col-lg-4 d-flex justify-content-center align-items-center">
-				<a data-aos="fade-left" href="assets/images/portfolio/mardi_gras_3.jpg" data-lightbox="Mardi Gras"
+				<a data-aos="fade-left" href=./assets/images/portfolio/mardi_gras_3.jpg" data-lightbox="Mardi Gras"
 					data-title="Mardi Gras" class="showcase__img-container">
-					<img src="assets/images/portfolio/mardi_gras_3.jpg" alt="Mardi Gras" class="showcase__img" />
+					<img src=./assets/images/portfolio/mardi_gras_3.jpg" alt="Mardi Gras" class="showcase__img" />
 				</a>
 			</div>
 		</div>
@@ -233,23 +233,23 @@
 		<!-- Image Group 6 -->
 		<div class="row no-gutters showcase__img-group mb-5">
 			<div class="col-12 col-lg-4 d-flex justify-content-center align-items-center">
-				<a data-aos="fade-right" href="assets/images/portfolio/vintage_french_1.jpg" data-lightbox="Vintage French"
+				<a data-aos="fade-right" href=./assets/images/portfolio/vintage_french_1.jpg" data-lightbox="Vintage French"
 					data-title="Vintage French" class="showcase__img-container">
-					<img src="assets/images/portfolio/vintage_french_1.jpg" alt="Vintage French"
+					<img src=./assets/images/portfolio/vintage_french_1.jpg" alt="Vintage French"
 						class="showcase__img" />
 				</a>
 			</div>
 			<div class="col-12 col-lg-4 d-flex justify-content-center align-items-center">
-				<a data-aos="fade-up" href="assets/images/portfolio/vintage_french_2.jpg" data-lightbox="Vintage French"
+				<a data-aos="fade-up" href=./assets/images/portfolio/vintage_french_2.jpg" data-lightbox="Vintage French"
 					data-title="Vintage French" class="showcase__img-container">
-					<img src="assets/images/portfolio/vintage_french_2.jpg" alt="Vintage French"
+					<img src=./assets/images/portfolio/vintage_french_2.jpg" alt="Vintage French"
 						class="showcase__img" />
 				</a>
 			</div>
 			<div class="col-12 col-lg-4 d-flex justify-content-center align-items-center">
-				<a data-aos="fade-left" href="assets/images/portfolio/vintage_french_3.jpg" data-lightbox="Vintage French"
+				<a data-aos="fade-left" href=./assets/images/portfolio/vintage_french_3.jpg" data-lightbox="Vintage French"
 					data-title="Vintage French" class="showcase__img-container">
-					<img src="assets/images/portfolio/vintage_french_3.jpg" alt="Vintage French"
+					<img src=./assets/images/portfolio/vintage_french_3.jpg" alt="Vintage French"
 						class="showcase__img" />
 				</a>
 			</div>
