--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 					</a>
 
 					<!-- Beach Nautical -->
-					<a class="col-12 col-sm-12 col-md-4 portfolio__img" href=./assets/images/portfolio/beach_nautical_1.jpg" data-lightbox="Beach Nautical" data-title="Beach Nautical">
+					<a class="col-12 col-sm-12 col-md-4 portfolio__img" href="./assets/images/portfolio/beach_nautical_1.jpg" data-lightbox="Beach Nautical" data-title="Beach Nautical">
 						<div class="portfolio__img">
 							<img class="port-img" src="./assets/images/portfolio/beach_nautical_1.jpg" alt="1" />
 							<div class="overlay">
@@ -172,7 +172,7 @@
 					</a>
 
 					<!-- Filipiniana -->
-					<a class="col-12 col-sm-12 col-md-4 portfolio__img" href=./assets/images/portfolio/filipiniana_1.jpg" data-lightbox="Filipiniana" data-title="Filipiniana">
+					<a class="col-12 col-sm-12 col-md-4 portfolio__img" href="./assets/images/portfolio/filipiniana_1.jpg" data-lightbox="Filipiniana" data-title="Filipiniana">
 						<div class="portfolio__img">
 							<img class="port-img" src="./assets/images/portfolio/filipiniana_1.jpg" alt="1" />
 							<div class="overlay">
