--- a/services.html
+++ b/services.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="shortcut icon" href=./assets/images/favicon.ico" type="image/x-icon" />
+		<link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon" />
 		<title>Wedding Connections | Services</title>
 
 		<!-- Bootstrap -->
@@ -74,7 +74,7 @@
 				<!-- Image Container -->
 				<div class="col-12 col-lg-6 order-lg-1 d-flex align-items-center justify-content-center justify-content-lg-start service__img-container">
 					<h2 class="service__header pl-lg-5 text-center text-lg-left">One Stop Shop</h2>
-					<img src=./assets/images/services/wedding_shop.jpg" alt="wedding shop" class="service__img parallax" />
+					<img src="./assets/images/services/wedding_shop.jpg" alt="wedding shop" class="service__img parallax" />
 				</div>
 				<!-- Description -->
 				<div class="col-12 col-lg-6 d-flex flex-column justify-content-center text-justify ml-auto p-4 p-lg-5 service__description">
@@ -92,7 +92,7 @@
 				<!-- Image Container -->
 				<div class="col-12 col-lg-6 d-flex align-items-center justify-content-center justify-content-lg-end service__img-container">
 					<h2 class="pr-lg-5 text-center text-lg-right service__header">Wedding Coordination</h2>
-					<img src=./assets/images/services/wedding_planning.jpg" alt="wedding planning" class="service__img parallax" />
+					<img src="./assets/images/services/wedding_planning.jpg" alt="wedding planning" class="service__img parallax" />
 				</div>
 				<!-- Description -->
 				<div class="col-12 col-lg-6 d-flex flex-column justify-content-center text-justify mr-auto p-4 p-lg-5 service__description">
@@ -108,7 +108,7 @@
 				<!-- Image Container -->
 				<div class="col-12 col-lg-6 order-lg-1 d-flex align-items-center justify-content-center justify-content-lg-start service__img-container">
 					<h2 class="pl-lg-5 text-center text-lg-left service__header">Event Styling</h2>
-					<img src=./assets/images/services/wedding_venue.jpg" alt="wedding styling" class="service__img parallax" />
+					<img src="./assets/images/services/wedding_venue.jpg" alt="wedding styling" class="service__img parallax" />
 				</div>
 				<!-- Description -->
 				<div class="col-12 col-lg-6 d-flex flex-column justify-content-center text-justify ml-auto p-4 p-lg-5 service__description">
