fixed sidescroll issue with aos

--- a/index.html
+++ b/index.html
@@ -114,19 +114,19 @@
 					</div>
 
 					<div class="col-12 col-sm-12 col-md-6 sticky-img">
-						<figure class="services__fig" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="600">
+						<figure class="services__fig" data-aos="fade-left" data-aos-easing="linear" data-aos-duration="600">
 							<img class="services__img" src="./assets/images/home/services-2.jpg" alt="One stop shop" />
 							<figcaption class="bottom-left">
 								<h4>One Stop Shop</h4>
 							</figcaption>
 						</figure>
-						<figure class="services__fig" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="600">
+						<figure class="services__fig" data-aos="fade-left" data-aos-easing="linear" data-aos-duration="600">
 							<img class="services__img" src="./assets/images/home/services-1.jpg" alt="One stop shop" />
 							<figcaption class="bottom-left">
 								<h4>Wedding coordination</h4>
 							</figcaption>
 						</figure>
-						<figure class="services__fig" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="600">
+						<figure class="services__fig" data-aos="fade-left" data-aos-easing="linear" data-aos-duration="600">
 							<img class="services__img" src="./assets/images/home/services-3.jpg" alt="One stop shop" />
 							<figcaption class="bottom-left">
 								<h4>Event styling</h4>
