- fixed navbar responsiveness for small screens - fixed homepage hero for small devices

--- a/about.html
+++ b/about.html
@@ -20,7 +20,10 @@
 		<!-- NAVIGATION -->
 		<nav id="navigation" class="navbar navbar-dark navbar-expand-lg fixed-top">
 			<div class="container-fluid navigation__navcon--width">
-				<a class="navbar-brand" href="./index.html">WEDDING CONNECTIONS</a>
+				<a class="navbar-brand" href="./index.html"
+					>WEDDING<br class="d-sm-none" />
+					CONNECTIONS</a
+				>
 				<button id="btn-menu" data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
 				<div class="collapse navbar-collapse" id="navcol-1">
 					<ul class="nav navbar-nav">
