fix scroll issue at index and portfolio section

--- a/portfolio.html
+++ b/portfolio.html
@@ -70,7 +70,7 @@
 		<!-- HEADER SECTION -->
 		<div id="top_page_bg" class="d-flex align-items-center">
 			<div class="container">
-				<h2 class="about_p__h2">portfolio</h2>
+				<h2 class="about_p__h2">Portfolio</h2>
 				<div class="line line__color"></div>
 				<h5 class="about_p__h5">See how we sparked joy through the years</h5>
 			</div>
