--- a/services.html
+++ b/services.html
@@ -64,7 +64,7 @@
 		<!-- HEADER SECTION -->
 		<div id="top_page_bg" class="d-flex align-items-center">
 			<div class="container">
-				<h2 class="about_p__h2">our services</h2>
+				<h2 class="about_p__h2">Our services</h2>
 				<div class="line line__color"></div>
 				<h5 class="about_p__h5">What we do</h5>
 			</div>
@@ -85,9 +85,7 @@
 						Convenience is a key attribute most of today’s women look for when planning an event as personal as the Wedding Day. Brides would find that their canvassing time is reduced with Wedding
 						Connections mainly because suppliers from various categories are found under one roof.
 					</p>
-					<p>
-						The Wedding Connections One-Stop Bridal Shop is a 160-square meter showroom where suppliers and clients can hold private meetings within the Makati Central Business District.
-					</p>
+					<p>The Wedding Connections One-Stop Bridal Shop is a 160-square meter showroom where suppliers and clients can hold private meetings within the Makati Central Business District.</p>
 				</div>
 			</div>
 			<!-- Service Block 2 -->
